# herenciaClara

./: .gitignore  app.py  config.yaml  pyproject.toml
analytics/: data.json
componentes/: blog.py  calculadora.py  chatbot.py  contacto.py  expander.py  faq.py  summarizer.py  summarizer_pdf.py
